--- a/master-file/fr/formulaire-fiche-maitresse.html
+++ b/master-file/fr/formulaire-fiche-maitresse.html
@@ -8,14 +8,14 @@
 		<meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
 		<meta http-equiv="Pragma" content="no-cache">
 		<meta http-equiv="Expires" content="-1">
-		<meta name="description" content="Formularies du processus d'inscription réglementaire">
-		<meta name="keywords" content="Santé, Processus d'inscription réglementaire, PIR">
+		<meta name="description" content="Formulaires de fiches maîtresses">
+		<meta name="keywords" content="Santé, Formulaire de demande de fiches maîtresses, Fiches maîtresses">
 		<meta name="author" content="Santé Canada">
-		<meta property="dcterms.title" content="Modèle de transaction réglementaire: Processus d'inscription réglementaire - Canada.ca">
+		<meta property="dcterms.title" content="Modèle de transaction réglementaire: Formulaire de demande de fiches maîtresses - Canada.ca">
 		<meta property="dcterms.creator" content="Gouvernement du Canada, Santé Canada">
-		<meta property="dcterms.issued" title="W3CDTF" content="2019-01-01">
-		<meta property="dcterms.modified" title="W3CDTF" content="2023-02-14">
-		<meta property="dcterms.subject" title="gccore" content="Médicaments; Pharmaceutiques, produits de santé; Processus d’inscription réglementaire">
+		<meta property="dcterms.issued" title="W3CDTF" content="2023-06-01">
+		<meta property="dcterms.modified" title="W3CDTF" content="2023-04-19">
+		<meta property="dcterms.subject" title="gccore" content="Médicaments; Pharmaceutiques, produits de santé; Fiches maîtresses">
 		<meta property="dcterms.language" title="ISO639-2/T" content="fra">
 		<!-- Meta data-->
 		<!-- Load closure template scripts -->
@@ -170,7 +170,7 @@
 			<script>
 				var defPreFooter = document.getElementById("def-preFooter");
 				defPreFooter.outerHTML = wet.builder.preFooter({
-					"dateModified": "2023-04-18",
+					"dateModified": "2023-04-19",
 					"cdnEnv": "prod"
 				});
 			</script>
@@ -233,6 +233,6 @@
 		</script>
     <!--Start add custom scripts here-->
     <script src="./assets/lib/xml2json.js"></script>
-	<script src="runtime.3b6a30643cba2830.js" type="module"></script><script src="polyfills.26f478b58327f970.js" type="module"></script><script src="main.9a3fea853f3cf515.js" type="module"></script>
+	<script src="runtime.3b6a30643cba2830.js" type="module"></script><script src="polyfills.26f478b58327f970.js" type="module"></script><script src="main.2506c879df01cf88.js" type="module"></script>
 
 </body></html>
