--- a/master-file/en/master-file-form.html
+++ b/master-file/en/master-file-form.html
@@ -8,14 +8,14 @@
 		<meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
 		<meta http-equiv="Pragma" content="no-cache">
 		<meta http-equiv="Expires" content="-1">
-		<meta name="description" content="Regulatory Enrolment Process Forms">
-		<meta name="keywords" content="Health, Regulatory Enrolment Process, REP">
+		<meta name="description" content="Master File Forms">
+		<meta name="keywords" content="Health, Master file Application Form, Master files">
 		<meta name="author" content="Health Canada">
-		<meta property="dcterms.title" content="Regulatory Enrolment Process - Canada.ca">
+		<meta property="dcterms.title" content="Regulatory Transaction Template: Master File Application Form - Canada.ca">
 		<meta property="dcterms.creator" content="Government of Canada, Health Canada">
-		<meta property="dcterms.issued" title="W3CDTF" content="2019-01-01">
-		<meta property="dcterms.modified" title="W3CDTF" content="currentDate()">
-		<meta property="dcterms.subject" title="gccore" content="Drugs; Pharmaceuticals, Health care products; Regulatory Enrolment Process">
+		<meta property="dcterms.issued" title="W3CDTF" content="2023-06-01">
+		<meta property="dcterms.modified" title="W3CDTF" content="2023-04-19">
+		<meta property="dcterms.subject" title="gccore" content="Drugs; Pharmaceuticals, Health care products; Master Files">
 		<meta property="dcterms.language" title="ISO639-2/T" content="eng">
 		<!-- Meta data-->
 		<!-- Load closure template scripts -->
@@ -170,7 +170,7 @@
 			<script>
 				var defPreFooter = document.getElementById("def-preFooter");
 				defPreFooter.outerHTML = wet.builder.preFooter({
-					"dateModified": "2023-04-18",
+					"dateModified": "2023-04-19",
 					"cdnEnv": "prod"
 				});
 			</script>
@@ -233,6 +233,6 @@
 		</script>
     <!--Start add custom scripts here-->
     <script src="./assets/lib/xml2json.js"></script>
-	<script src="runtime.3b6a30643cba2830.js" type="module"></script><script src="polyfills.26f478b58327f970.js" type="module"></script><script src="main.bcdf5014c0bb80f5.js" type="module"></script>
+	<script src="runtime.3b6a30643cba2830.js" type="module"></script><script src="polyfills.26f478b58327f970.js" type="module"></script><script src="main.75203c99932446f7.js" type="module"></script>
 
 </body></html>
