Deployment of MF form on 2023-07-10

--- a/master-file/fr/formulaire-fiche-maitresse.html
+++ b/master-file/fr/formulaire-fiche-maitresse.html
@@ -5,13 +5,14 @@
 		<meta content="width=device-width,initial-scale=1" name="viewport">
 		<!-- Meta data -->
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<meta http-equiv="content-security-policy" content="script-src 'self' 'unsafe-inline' www.canada.ca; img-src 'self' www.canada.ca; font-src 'self' www.canada.ca; style-src 'self' www.canada.ca 'unsafe-inline'; default-src 'self' www.canada.ca; ">
 		<meta name="description" content="Formulaires de fiches maîtresses">
 		<meta name="keywords" content="Santé, Formulaire de demande de fiches maîtresses, Fiches maîtresses">
 		<meta name="author" content="Santé Canada">
 		<meta property="dcterms.title" content="Modèle de transaction réglementaire: Formulaire de demande de fiches maîtresses - Canada.ca">
 		<meta property="dcterms.creator" content="Gouvernement du Canada, Santé Canada">
 		<meta property="dcterms.issued" title="W3CDTF" content="2023-06-26">
-		<meta property="dcterms.modified" title="W3CDTF" content="2023-06-21">
+		<meta property="dcterms.modified" title="W3CDTF" content="2023-07-10">
 		<meta property="dcterms.subject" title="gccore" content="Médicaments; Pharmaceutiques, produits de santé; Fiches maîtresses">
 		<meta property="dcterms.language" title="ISO639-2/T" content="fra">
 		<!-- Meta data-->
@@ -43,7 +44,7 @@
 				"cdnEnv": "prod"
 			}));
 		</script>
-	<link rel="stylesheet" href="styles.151dfe45ce051e38.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles.151dfe45ce051e38.css"></noscript></head>
+	<style>html,body{max-width:100%;overflow-x:hidden}</style><link rel="stylesheet" href="styles.c6be99e5d97cb53b.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles.c6be99e5d97cb53b.css"></noscript></head>
 	<body vocab="https://schema.org/" typeof="WebPage">
 		<div id="def-top">
 			<!-- Write closure fall-back static file -->
@@ -167,7 +168,7 @@
 			<script>
 				var defPreFooter = document.getElementById("def-preFooter");
 				defPreFooter.outerHTML = wet.builder.preFooter({
-					"dateModified": "2023-06-21",
+					"dateModified": "2023-07-10",
 					"cdnEnv": "prod"
 				});
 			</script>
@@ -230,6 +231,6 @@
 		</script>
     <!--Start add custom scripts here-->
     <script src="./assets/lib/xml2json.js"></script>
-	<script src="runtime.3b6a30643cba2830.js" type="module"></script><script src="polyfills.26f478b58327f970.js" type="module"></script><script src="main.f2f25697334dd60b.js" type="module"></script>
+	<script src="runtime.3b6a30643cba2830.js" type="module"></script><script src="polyfills.26f478b58327f970.js" type="module"></script><script src="main.857d1013c83e4cb6.js" type="module"></script>
 
 </body></html>
