--- a/prod_v43_index.html
+++ b/prod_v43_index.html
@@ -281,9 +281,21 @@
 
     <div class="datemod col-xs-12 mrgn-tp-lg">
         <dl id="wb-dtmd">
-            <dt>Date modified: 2022-06-07</dt>
+            <dt id="dtmd"></dt>
         </dl>
     </div>
+
+    <!--Date Modified Script Starts-->
+    <script>
+        let date = new Date(document.lastModified);
+        console.log(document.lastModified);    
+        let year = date.toLocaleString("default", {year: "numeric"});
+        let month = date.toLocaleString("default", {month: "2-digit"});
+        let day = date.toLocaleString("default", {day: "2-digit"});
+        
+        document.getElementById("dtmd").innerHTML = "Date modified: " + year + "-" + month + "-" + day;
+    </script>
+
 </main>
 <!--<aside class="gc-nttvs container">-->
 <!--<h2>Government of Canada activities and initiatives</h2>-->
