Testing #flastmod again

--- a/prod_v43_index_include_test.html
+++ b/prod_v43_index_include_test.html
@@ -258,7 +258,7 @@
     
         <div class="datemod col-xs-12 mrgn-tp-lg">
             <dl id="wb-dtmd">
-                <dt id="dtmd"><!--#flastmod file="index.html"--></dt>
+                <dt id="dtmd"> <!-- #flastmod file="prod_v43_index_include_test.html" --> </dt>
             </dl>
         </div>
     
