Testing #flastmod with config

--- a/prod_v43_index_include_test.html
+++ b/prod_v43_index_include_test.html
@@ -256,9 +256,10 @@
         <!--</div>-->
         <!--content ends here -->
     
+        <!--#config timefmt="%A %B %d, %Y"-->
         <div class="datemod col-xs-12 mrgn-tp-lg">
             <dl id="wb-dtmd">
-                <dt id="dtmd"> <!-- #flastmod file="prod_v43_index_include_test.html" --> </dt>
+                <dt id="dtmd"> <!--#flastmod file="prod_v43_index_include_test.html"--> </dt>
             </dl>
         </div>
     
