testing date with echo

--- a/prod_v43_index_include_test.html
+++ b/prod_v43_index_include_test.html
@@ -259,7 +259,7 @@
         <!--#config timefmt="%A %B %d, %Y"-->
         <div class="datemod col-xs-12 mrgn-tp-lg">
             <dl id="wb-dtmd">
-                <dt id="dtmd"> <!--#flastmod file="prod_v43_index_include_test.html"--> </dt>
+                <dt id="dtmd"> <!--#echo var="LAST_MODIFIED" --> </dt>
             </dl>
         </div>
     
