--- a/mds_index.html
+++ b/mds_index.html
@@ -169,7 +169,7 @@
                         </ul>
                     </div>
                     <div class="row">
-                        <a href="https://www.canada.ca/en/health-canada/services/drugs-health-products/drug-products/applications-submissions/guidance-documents/filing-submissions-electronically/medical-device-dossier-template.html">Dossier ID Request Form for Medical Devices (Last updated: January 9, 2020)</a>
+                        <a href="https://www.canada.ca/en/health-canada/services/drugs-health-products/drug-products/applications-submissions/guidance-documents/filing-submissions-electronically/medical-device-dossier-template.html">Dossier ID Request Form for Medical Devices</a>
                         <ul>
                             <li>Required to obtain a Dossier ID. </li>
                             <li>Upon completion, the form is auto-sent via email the Health Canada, outside of the regulatory transaction (application). </li>
@@ -208,7 +208,7 @@
 
             <div class="datemod col-xs-12 mrgn-tp-lg">
                 <dl id="wb-dtmd">
-                    <dt>Date modified: 2021-12-09</dt>
+                    <dt>Date modified: 2023-09-15</dt>
                 </dl>
             </div>
         </div>
