REPPBFORM-613 added in include for index and updated index, version_history changed back changes in prod_v43

--- a/prod_v43_index-fr.html
+++ b/prod_v43_index-fr.html
@@ -251,21 +251,10 @@
     <div class="datemod col-xs-12 mrgn-tp-lg">
         <div class="datemod col-xs-12 mrgn-tp-lg">
             <dl id="wb-dtmd">
-                <dt id="dtmd-fr"></dt>
+                <dt>Date de modification : 07/06/2022</dt>
             </dl>
         </div>
     </div>
-    
-    <!--Date Modified Script Starts -->
-    <script>
-        let date = new Date(document.lastModified);    
-        let year = date.toLocaleString("default", {year: "numeric"});
-        let month = date.toLocaleString("default", {month: "2-digit"});
-        let day = date.toLocaleString("default", {day: "2-digit"});
-        
-        document.getElementById("dtmd-fr").innerHTML = "Date de modification: " + year + "-" + month + "-" + day;
-    </script>
-
     </div>
 </main>
 <!--<aside class="gc-nttvs container">-->
