REPPBFORM-613 changed date format for french version

--- a/index-fr.html
+++ b/index-fr.html
@@ -244,7 +244,7 @@
             <div class="datemod col-xs-12 mrgn-tp-lg">
                 <div class="datemod col-xs-12 mrgn-tp-lg">
                     <dl id="wb-dtmd">
-                        <dt>Date de modification : 15/09/2023</dt>
+                        <dt>Date de modification : 2023-09-18</dt>
                     </dl>
                 </div>
             </div>
