REPPBFORM-608 added in changes to index files and version history

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                     <h2>REP Templates & Form Links</h2>
                 </div>
                 <div class="row">
-                    <a href="./version_history.html">Template version history  (updated 2023-02-28)</a>
+                    <a href="./version_history.html">Template version history  (updated 2023-10-XX)</a>
                     <br>
                 </div>
                 <div class="row">
@@ -207,7 +207,7 @@
                     </ul>
                 </div>
                 <div class="row">
-                    <a href="./v44/product/product.html">Product Information (PI) Template (updated on 2023-02-28)</a>
+                    <a href="./v44/product/product.html">Product Information (PI) Template (updated on 2023-10-XX)</a>
                     <ul>
                         <li> Required for only a subset of transactions. Refer to section “2.5.2 Product information (PI) Template and Process” of the REP Guidance Document for list of subset transaction.</li>
                         <li> Sent via the CESG in folder 1.2.1  for human drugs and disinfectants or part I folder 1.5 for veterinary drugs of the regulatory transaction (when provided).</li>
