--- a/historique_révisions.html
+++ b/historique_révisions.html
@@ -152,6 +152,26 @@
             </div>
 
             <div class="row">
+                <h3>Publication du 8 janvier 2024</h3>
+            </div>
+            <div class="row">
+                <table class="col-md-12">
+                    <tr>
+                        <th class="col-md-3">Modèle</th>
+                        <th class="col-md-9">Modification</th>
+                    </tr>
+                    <tr>
+                        <td class="col-md-3">Modèle d’information sur le produit (IP)</td>
+                        <td class="col-md-9">
+                            <ul>
+                                <li>Ajout du questionnaire pour le projet pilote sur les données pédiatriques</li>
+                            </ul>
+                        </td>
+                    </tr>
+                </table>
+            </div>
+
+            <div class="row">
                 <h3>Publication du 28 février 2023</h3>
             </div>
 
