New CSP Form links for Oct 3, 2023 - English
https://jill.hc-sc.gc.ca/jira/browse/HPFBFORMS-69

--- a/index.html
+++ b/index.html
@@ -148,9 +148,27 @@
             <h1 property="name" id="wb-cont"> Regulatory Enrolment Process </h1>
         </div>
 
+         <div>
+            <div class="row">
+                <h2>New CSP Form (Start to use on October 2023) - Non-brexit Version B </h2>
+            </div>
+            <div class="row">
+                <a href="./certificate2023/certificate-supplementary-protection-form-2023.html">CSP Form English-External (Oct 3, 2023)</a>
+            </div>
+            <div class="row">
+                <a href="./certificate2023/certificate-supplementary-protection-form-internal.html">CSP Form English-Internal (Oct 3, 2023)</a>
+            </div>
+            <div class="row">
+                <a href="./certificate2023/formulaire-certificat-protection-supplementaire-2023.html">CSP Form French-External (Oct 3, 2023)</a>
+            </div>
+            <div class="row">
+                <a href="./certificate2023/formulaire-certificat-protection-supplementaire-internal.html">CSP Form French-Internal (Oct 3, 2023)</a>
+            </div>
+        </div>
+
         <div>
             <div class="row">
-                <h2>New CSP Form (Start to use on January 2021) - Non-brexit Version B </h2>
+                <h2>Old CSP Form (Start to use on January 2021 until October 2023) - Non-brexit Version B </h2>
             </div>
             <div class="row">
                 <a href="./certificate/certificate-supplementary-protection-form-2021.html">CSP Form English-External (Dec 15, 2020)</a>
