--- a/index-fr.html
+++ b/index-fr.html
@@ -141,6 +141,64 @@
     <!--content starts here -->
 
     <div>
+            <div class="row">
+                <h2>New CSP Form (Start to use on October 2023) - Non-brexit Version B </h2>
+            </div>
+            <div class="row">
+                <a href="./certificate2023/certificate-supplementary-protection-form-2023.html">CSP Form English-External (Oct 3, 2023)</a>
+            </div>
+            <div class="row">
+                <a href="./certificate2023/certificate-supplementary-protection-form-internal.html">CSP Form English-Internal (Oct 3, 2023)</a>
+            </div>
+            <div class="row">
+                <a href="./certificate2023/formulaire-certificat-protection-supplementaire-2023.html">CSP Form French-External (Oct 3, 2023)</a>
+            </div>
+            <div class="row">
+                <a href="./certificate2023/formulaire-certificat-protection-supplementaire-internal.html">CSP Form French-Internal (Oct 3, 2023)</a>
+            </div>
+        </div>
+
+        <div>
+            <div class="row">
+                <h2>Old CSP Form (Start to use on January 2021 until October 2023) - Non-brexit Version B </h2>
+            </div>
+            <div class="row">
+                <a href="./certificate/certificate-supplementary-protection-form-2021.html">CSP Form English-External (Dec 15, 2020)</a>
+            </div>
+            <div class="row">
+                <a href="./certificate/certificate-supplementary-protection-form-internal.html">CSP Form English-Internal (Dec 15, 2020)</a>
+            </div>
+            <div class="row">
+                <a href="./certificate/formulaire-certificat-protection-supplementaire-2021.html">CSP Form French-External (Dec 15, 2020)</a>
+            </div>
+            <div class="row">
+                <a href="./certificate/formulaire-certificat-protection-supplementaire-internal.html">CSP Form French-Internal (Dec 15, 2020)</a>
+            </div>
+        </div>
+
+        <div>
+            <div class="row">
+                <h2>Old CSP Form (used from March 2020 to December 2020) - Non-brexit Version B </h2>
+            </div>
+            <div class="row">
+                <a href="./certificate2020/certificate-supplementary-protection-form-2020.html">CSP Form English-External (Mar 27, 2020)</a>
+            </div>
+            <div class="row">
+                <a href="./certificate2020/certificate-supplementary-protection-form-internal.html">CSP Form English-Internal (Mar 27, 2020)</a>
+            </div>
+            <div class="row">
+                <a href="./certificate2020/formulaire-certificat-protection-supplementaire-2020.html">CSP Form French-External (Mar 27, 2020)</a>
+            </div>
+            <div class="row">
+                <a href="./certificate2020/formulaire-certificat-protection-supplementaire-internal.html">CSP Form French-Internal (Mar 27, 2020)</a>
+            </div>
+        </div>
+
+
+    <div>
+        <h1 property="name" id="wb-cont"> Regulatory Enrolment Process Last Deployed: Sept 16 </h1>
+
+     <div>
         <div class="row">
             <h2>CSP Form</h2>
         </div>
@@ -157,10 +215,7 @@
             <a href="./csp-cps/formulaire-certificat-protection-supplementaire-internal.html">CSP Form French-Internal (June 8)</a>
         </div>
     </div>
-
-
-    <div>
-        <h1 property="name" id="wb-cont"> Regulatory Enrolment Process Last Deployed: Sept 16 </h1>
+        
         <div>
             <h2> External User Links</h2>
             <div class="row">
