Updated date modified for index.html CSP form

--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
 
     <div class="datemod col-xs-12 mrgn-tp-lg">
         <dl id="wb-dtmd">
-            <dt>Date modified: Feb 17, 2020</dt>
+            <dt>Date modified: 2023-09-26</dt>
         </dl>
     </div>
     </div>
