Deployment of HTML files for REPPBFORM-608

--- a/historique_révisions.html
+++ b/historique_révisions.html
@@ -150,26 +150,26 @@
                 <p>Si vous avez des questions concernant le contenu de ce document, veuillez communiquer avec <a href="mailto:ereview@hc-sc.gc.ca" lang="en">ereview@hc-sc.gc.ca</a>.</p>
 
             </div>
-
+			
 			<div class="row">
-				<h3>January 4, 2024 Release</h3>
-			</div>
-			<div class="row">
-				<table class="col-md-12">
-					<tr>
-						<th class="col-md-3">Template</th>
-						<th class="col-md-9">Change</th>
-					</tr>
-					<tr>
-						<td class="col-md-3">Product Information (PI) Template</td>
-						<td class="col-md-9">
-							<ul>
-								<li>Added the Pediatric Pilot Questionnaire</li>
-							</ul>
-						</td>
-					</tr>
-				</table>
-			</div>			
+            <h3>Publication du 8 janvier 2024</h3>
+            </div>
+            <div class="row">
+                <table class="col-md-12">
+                    <tr>
+                        <th class="col-md-3">Modèle</th>
+                        <th class="col-md-9">Modification</th>
+                    </tr>
+                    <tr>
+                        <td class="col-md-3">Modèle d’information sur le produit (IP)</td>
+                        <td class="col-md-9">
+                            <ul>
+                                <li>Ajout du questionnaire pour le projet pilote sur les données pédiatriques</li>
+                            </ul>
+                        </td>
+                    </tr>
+                </table>
+            </div>
 			
             <div class="row">
                 <h3>Publication du 28 février 2023</h3>
@@ -420,7 +420,7 @@
     <div class="datemod col-xs-12 mrgn-tp-lg">
         <div class="datemod col-xs-12 mrgn-tp-lg">
             <dl id="wb-dtmd">
-                <dt>Date de modification : 28/02/2023</dt>
+                <dt>Date de modification : 2023-10-10</dt>
             </dl>
         </div>
     </div>
