--- a/prod_v44/product/produit.html
+++ b/prod_v44/product/produit.html
@@ -16,7 +16,7 @@
     <meta property="dcterms.title" content="Modèle d'information sur le produit: Processus d'inscription réglementaire - Canada.ca"/>
     <meta property="dcterms.creator" content="Gouvernement du Canada, Santé Canada"/>
     <meta property="dcterms.issued" title="W3CDTF" content="2019-01-01"/>
-    <meta property="dcterms.modified" title="W3CDTF" content="2023-02-14"/>
+    <meta property="dcterms.modified" title="W3CDTF" content="2023-10-10"/>
     <meta property="dcterms.subject" title="gccore" content="Médicaments; Pharmaceutiques, produits de santé; Processus d’inscription réglementaire"/>
     <meta property="dcterms.language" title="ISO639-2/T" content="fra"/>
 
@@ -198,12 +198,12 @@
 
     <div class="row">
         <div class="col-md-12">
-            <h1 property="name" id="wb-cont">Modèle d'information sur le produit: Processus d'inscription réglementaire (Version 4.4.1)</h1>
+            <h1 property="name" id="wb-cont">Modèle d'information sur le produit: Processus d'inscription réglementaire (Version 4.4.2)</h1>
             <p class="pagetag">
                 <strong>De <a href="https://www.canada.ca/fr/sante-canada.html">Santé Canada</a></strong>
             </p>
         </div>
-        <div class=" col-md-12 module-table-contents" id="content_table">
+<!--        <div class=" col-md-12 module-table-contents" id="content_table">
             <section class="panel panel-default">
                 <header class="panel-heading clearfix">
                     <h2  class="panel-title">Table de matières</h2>
@@ -217,7 +217,7 @@
                     </ul>
                 </div>
             </section>
-        </div>
+        </div>-->
 
     </div>
     <!-- the main content -->
@@ -239,7 +239,7 @@
 	    <dt>Date de modification :</dt>
 	    <dd>
 	      <time property="dateModified">
-	        2023-02-14
+	        2023-10-10
 
 	      </time>
 	    </dd>
@@ -282,7 +282,7 @@
 
 <script src="app/lib/angular-aria.min.js"></script>
 
-<script src="app/scripts/drugProductAppEXT-fr_20230214_1114.min.js"></script>
+<script src="app/scripts/drugProductAppEXT-fr_20231010_0704.min.js"></script>
 
 <!-- endinject -->
 <!-- thirdParty:js  -->
