fixed missing part

--- a/mds_index-dec-1-2023.html
+++ b/mds_index-dec-1-2023.html
@@ -187,6 +187,13 @@
                             </ul>
                         </div>
                         <div class="row">
+                            <a href="./mds/applicationInfo/en/index.html#main">Application Information Template (Last updated: May 14, 2020)</a>
+                            <ul>
+                                <li>Sent via the CESG within a regulatory transaction (application).</li>
+                                <li>Required for only a subset of transactions. Refer to section “2.45.2 Application information (AI) Template and Process” of the REP Guidance Document for Medical Devices detailed description of the requirements for the AI template. </li>
+                            </ul>
+                        </div>
+                        <div class="row">
                             <a href="./mds-test/Device_Details.xlsx" download>Device Details (December 1, 2023)</a>
                             <ul>
                                 <li>Sent via the CESG within a regulatory transaction (application).</li>
