REP CSP Update index-fr.html

--- a/index-fr.html
+++ b/index-fr.html
@@ -139,8 +139,12 @@
 <main role="main" property="mainContentOfPage" class="container">
 
     <!--content starts here -->
+ <div>
+        <div class="row">
+            <h1 property="name" id="wb-cont"> Regulatory Enrolment Process </h1>
+        </div>
 
-    <div>
+         <div>
             <div class="row">
                 <h2>New CSP Form (Start to use on November 2023) - Non-brexit Version B </h2>
             </div>
@@ -193,74 +197,74 @@
                 <a href="./certificate2020/formulaire-certificat-protection-supplementaire-internal.html">CSP Form French-Internal (Mar 27, 2020)</a>
             </div>
         </div>
+        <!--<div>-->
+            <!--<div class="row">-->
+                <!--<h2>New CSP Form (Start to use on January 2019) - Brexit Version A </h2>-->
+            <!--</div>-->
+            <!--<div class="row">-->
+                <!--<a href="./certificateBrexit/certificate-supplementary-protection-form-2019-2020.html">CSP Form English-External (Mar 20, 2019)</a>-->
+            <!--</div>-->
+            <!--<div class="row">-->
+                <!--<a href="./certificateBrexit/certificate-supplementary-protection-form-internal.html">CSP Form English-Internal (Mar 20, 2019)</a>-->
+            <!--</div>-->
+            <!--<div class="row">-->
+                <!--<a href="./certificateBrexit/formulaire-certificat-protection-supplementaire-2019-2020.html">CSP Form French-External (Mar 20, 2019)</a>-->
+            <!--</div>-->
+            <!--<div class="row">-->
+                <!--<a href="./certificateBrexit/formulaire-certificat-protection-supplementaire-internal.html">CSP Form French-Internal (Mar 20, 2019)</a>-->
+            <!--</div>-->
+        <!--</div>-->
 
-
-    <div>
-        <h1 property="name" id="wb-cont"> Regulatory Enrolment Process Last Deployed: Sept 16 </h1>
-
-     <div>
-        <div class="row">
-            <h2>CSP Form</h2>
-        </div>
-        <div class="row">
-            <a href="./csp-cps/certificate-supplementary-protection-form.html">CSP Form English-External (June 8)</a>
-        </div>
-        <div class="row">
-            <a href="./csp-cps/certificate-supplementary-protection-form-internal.html">CSP Form English-Internal (June 8)</a>
-        </div>
-        <div class="row">
-            <a href="./csp-cps/formulaire-certificat-protection-supplementaire.html">CSP Form French-External (June 8)</a>
-        </div>
-        <div class="row">
-            <a href="./csp-cps/formulaire-certificat-protection-supplementaire-internal.html">CSP Form French-Internal (June 8)</a>
-        </div>
-    </div>
-        
         <div>
-            <h2> External User Links</h2>
             <div class="row">
-                <a href="companyEnrolEXT-fr.html">Company Enrolment -External</a>
+                <h2>Old CSP Form</h2>
             </div>
             <div class="row">
-                <a href="transactionEnrol-fr.html">Transaction Enrolment -External</a>
+                <a href="./csp-cps/certificate-supplementary-protection-form.html">CSP Form English-External (Sept 5, 2017)</a>
             </div>
             <div class="row">
-                <a href="activityEnrolEXT-fr.html">Activity Enrolment -External</a>
+                <a href="./csp-cps/certificate-supplementary-protection-form-internal.html">CSP Form English-Internal (Sept 5, 2017)</a>
             </div>
             <div class="row">
-                <a href="dossier/dossierEnrolEXT-fr.html">Dossier Enrolment External (Sept 20)</a>
+                <a href="./csp-cps/formulaire-certificat-protection-supplementaire.html">CSP Form French-External (Sept 5, 2017)</a>
             </div>
-
-        </div>
-        <div>
-            <h2>Internal User (i.e. HPFB) Links</h2>
             <div class="row">
-                <a href="companyEnrolINT-fr.html">Company Enrolment -Internal </a>
+                <a href="./csp-cps/formulaire-certificat-protection-supplementaire-internal.html">CSP Form French-Internal (Sept 5, 2017)</a>
             </div>
-
-            <div class="row">
-                <a href="activityEnrolINT-fr.html">Activity Enrolment -Internal</a>
-            </div>
-
-            <div class="row">
-                <a href="dossier/dossierEnrolIN-fr.html">Dossier Enrolment Internal (Sept 20)</a>
-            </div>
-
-        </div>
-        <div>
-            <row>
-                <h2>Summary of changes</h2>
-                <ul>
-                    <li>Added File naming conventions</li>
-                    <li>Activity Form External: added Help page links (demo)</li>
-                    <li>Fixes to amendment behavior (company and Activity)</li>
-                    <li>Fix to xml generation, internal Activity Form </li>
-                    <li>Company Form: Fix to duplicate role Validation </li>
-                    <li>Company Form: Fix to country validation visibility behaviour</li>
-                </ul>
-            </row>
         </div>
 
+        <!--<div>-->
+            <!--<div class="row">-->
+                <!--<h2> External User Links</h2>-->
+            <!--</div>-->
+            <!--<div class="row">-->
+                <!--<a href="./company/companyEXT-en.html">Company Enrolment -External (Dec 1, 2017)</a>-->
+            <!--</div>-->
+            <!--<div class="row">-->
+                <!--<a href="./transaction/transactionEXT-en.html">Transaction Enrolment -External (Aug 08, 2018)</a>-->
+            <!--</div>-->
+            <!--<div class="row">-->
+                <!--<a href="./activity/activityEXT-en.html">Activity Enrolment -External (June 18, 2018)</a>-->
+            <!--</div>-->
+            <!--<div class="row">-->
+                <!--<a href="./dossier/dossierEXT-en.html">Dossier Enrolment External (Dec 6, 2017)</a>-->
+            <!--</div>-->
+        <!--</div>-->
+        <!--<div>-->
+            <!--<div class="row">-->
+                <!--<h2>Internal User (i.e. HPFB) Links</h2>-->
+            <!--</div>-->
+            <!--<div class="row">-->
+                <!--<a href="./company/companyINT-en.html">Company Enrolment -Internal (Nov 3, 2017)</a>-->
+            <!--</div>-->
+
+            <!--<div class="row">-->
+                <!--<a href="./activity/activityINT-en.html">Activity Enrolment -Internal (June 18, 2018)</a>-->
+            <!--</div>-->
+            <!--<div class="row">-->
+                <!--<a href="./dossier/dossierINT-en.html">Dossier Enrolment Internal (Dec 6, 2017)</a>-->
+            <!--</div>-->
+        <!--</div>-->
     </div>
     <!--content ends here -->
 
