added changes from nov 6

--- a/mds_index-dec-1-2023.html
+++ b/mds_index-dec-1-2023.html
@@ -190,11 +190,11 @@
                             <a href="./mds/applicationInfo/en/index.html#main">Application Information Template (Last updated: May 14, 2020)</a>
                             <ul>
                                 <li>Sent via the CESG within a regulatory transaction (application).</li>
-                                <li>Required for only a subset of transactions. Refer to section “2.45.2 Application information (AI) Template and Process” of the REP Guidance Document for Medical Devices detailed description of the requirements for the AI template. </li>
+                                <li>Required for only a subset of transactions. Refer to section “2.4.2 Application information (AI) Template and Process” of the REP Guidance Document for Medical Devices detailed description of the requirements for the AI template. </li>
                             </ul>
                         </div>
                         <div class="row">
-                            <a href="./mds-test/Device_Details.xlsx" download>Device Details (December 1, 2023)</a>
+                            <div>Device Details (December 1, 2023)</div>
                             <ul>
                                 <li>Sent via the CESG within a regulatory transaction (application).</li>
                                 <li>Required for all new licence applications, as well as any amendment applications that may impact a manufacturers catalogue listing.</li>
@@ -202,10 +202,10 @@
                             </ul>
                         </div>
                         <div class="row">
-                            <a href="./mds-test/Application_Attestation_Form.pdf" download>Application Attestation Form (December 1, 2023)</a>
+                            <div>Application Attestation Form (December 1, 2023)</div>
                             <ul>
                                 <li>Sent via the CESG within a regulatory transaction (application).</li>
-                                <li>Application Attestation Form (December 1, 2023).</li>
+                                <li>Required for the initial transaction of a new regulatory activity</li>
                                 <li><a href="./mds-test/Application_Attestation_Form.pdf" download>Download Application Attestation pdf form.</a></li>
                             </ul>
                         </div>
