REP CSP version 1.6 - 2023 form - internal links updated

--- a/index.html
+++ b/index.html
@@ -189,12 +189,22 @@
         </div>
         <div>
             <div class="row">
-                <h2>New Internal Form (effective January 06, 2021)</h2>
+                <h2>New CSP Form (Start to use on November 2023) - Non-brexit Version B</h2>
             </div>
             <div class="row">
+                <a href="./certificate2023/certificate-supplementary-protection-form-internal.html">CSP Form English-Internal (November 16, 2023)</a><br/>
+                <a href="./certificate2023/formulaire-certificat-protection-supplementaire-internal.html">CSP Form French-Internal (November 16, 2023)</a>
+            </div>
+        </div>
+        <div>
+            <div class="row">
+                <h2>Old Internal Form (effective January 06, 2021 to November 16, 2023)</h2>
+            </div>
+            <div class="row">      
                 <a href="./certificate2021/certificate-supplementary-protection-form-internal.html">Certificate of Supplementary Protection -Internal (April 1, 2020) </a>
             </div>
         </div>
+
         <div>
             <div class="row">
                 <h2>Old Internal Form (effective April 01, 2020 to January 05, 2021)</h2>
