updated revision history and added mds_index french version

--- a/historique_révisions.html
+++ b/historique_révisions.html
@@ -164,7 +164,7 @@
                         <td class="col-md-3">Modèle d’information sur le produit (IP)</td>
                         <td class="col-md-9">
                             <ul>
-                                <li>Ajout du questionnaire pour le projet pilote sur les données pédiatriques</li>
+                                <li>Ajout d’enquête pilote pédiatrique</li>
                             </ul>
                         </td>
                     </tr>
