--- a/version_history.html
+++ b/version_history.html
@@ -166,7 +166,7 @@
 						<td class="col-md-3">Product Information (PI) Template</td>
 						<td class="col-md-9">
 							<ul>
-								<li>Added the Pediatric Pilot Questionnaire</li>
+								<li>Added the Pediatric Pilot Survey</li>
 							</ul>
 						</td>
 					</tr>
