redploy md co v4.0.0

--- a/mds/prod_v40/internal/en/index-internal.html
+++ b/mds/prod_v40/internal/en/index-internal.html
@@ -125,7 +125,7 @@
 			defTop.outerHTML = wet.builder.top({
 				"lngLinks": [{
 					"lang": "fr",
-					"href": "../fr/im-entreprise.html",
+					"href": "../fr/index-internal.html",
 					"text": "Français"
 				}],
 				"breadcrumbs": [{
@@ -232,5 +232,5 @@
 		</script>
     <!--Start add custom scripts here-->
     <script src="./assets/lib/xml2json.js"></script>
-	<script src="polyfills-LZBJRJJE.js" type="module"></script><script src="main-3M4YWC3N.js" type="module"></script></body>
+	<script src="polyfills-LZBJRJJE.js" type="module"></script><script src="main-SXOPXBSE.js" type="module"></script></body>
 </html>
