--- a/mds/prod_v40/internal/fr/index-internal.html
+++ b/mds/prod_v40/internal/fr/index-internal.html
@@ -124,7 +124,7 @@
 			defTop.outerHTML = wet.builder.top({
 				"lngLinks": [{
 					"lang": "en",
-					"href": "../en/md-company.html",
+					"href": "../en/index-internal.html",
 					"text": "English"
 				}],
 				"breadcrumbs": [{
@@ -231,5 +231,5 @@
 		</script>
     <!--Start add custom scripts here-->
     <script src="./assets/lib/xml2json.js"></script>
-	<script src="polyfills-LZBJRJJE.js" type="module"></script><script src="main-CZ7PMH7O.js" type="module"></script></body>
+	<script src="polyfills-LZBJRJJE.js" type="module"></script><script src="main-QNCZA6FD.js" type="module"></script></body>
 </html>
