--- a/mds/prod_v40/external/fr/im-entreprise.html
+++ b/mds/prod_v40/external/fr/im-entreprise.html
@@ -12,7 +12,7 @@
 		<meta name="author" content="Santé Canada">
 		<meta property="dcterms.creator" content="Gouvernement du Canada, Santé Canada">
 		<meta property="dcterms.issued" title="W3CDTF" content="2024-01-01">
-		<meta property="dcterms.modified" title="W3CDTF" content="2023-12-21">
+		<meta property="dcterms.modified" title="W3CDTF" content="2024-01-08">
 		<meta property="dcterms.language" title="ISO639-2/T" content="fra">
 		<meta name='description' content="Formularies du processus d'inscription réglementaire pour les instruments médicaux"/>
 <meta name="keywords" content="Santé, Processus d'inscription réglementaire, PIR, Instruments médicaux"/>
@@ -168,7 +168,7 @@
 			<script>
 				var defPreFooter = document.getElementById("def-preFooter");
 				defPreFooter.outerHTML = wet.builder.preFooter({
-					"dateModified": "2023-12-21",
+					"dateModified": "2024-01-08",
 					"cdnEnv": "prod"
 				});
 			</script>
@@ -231,5 +231,5 @@
 		</script>
     <!--Start add custom scripts here-->
     <script src="./assets/lib/xml2json.js"></script>
-	<script src="polyfills-LZBJRJJE.js" type="module"></script><script src="main-D7FLUUIE.js" type="module"></script></body>
+	<script src="polyfills-LZBJRJJE.js" type="module"></script><script src="main-AI6X4PIE.js" type="module"></script></body>
 </html>
