REP MD CO Deployment 2024-01-24

--- a/mds/prod_v40/company/fr/im-entreprise.html
+++ b/mds/prod_v40/company/fr/im-entreprise.html
@@ -8,11 +8,11 @@
 		<meta content="width=device-width,initial-scale=1" name="viewport">
 		<!-- Meta data -->
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<meta http-equiv="content-security-policy" content="script-src 'self' 'unsafe-inline' www.canada.ca; img-src 'self' www.canada.ca; font-src 'self' www.canada.ca; style-src 'self' www.canada.ca 'unsafe-inline'; default-src 'self' www.canada.ca; ">
+		<meta http-equiv="content-security-policy" content="script-src 'self' 'unsafe-inline' www.canada.ca; img-src 'self' www.canada.ca; font-src 'self' www.canada.ca maxcdn.bootstrapcdn.com fonts.gstatic.com; style-src 'self' www.canada.ca maxcdn.bootstrapcdn.com 'unsafe-inline'; default-src 'self' www.canada.ca; ">
 		<meta name="author" content="Santé Canada">
 		<meta property="dcterms.creator" content="Gouvernement du Canada, Santé Canada">
-		<meta property="dcterms.issued" title="W3CDTF" content="2024-01-01">
-		<meta property="dcterms.modified" title="W3CDTF" content="2024-01-08">
+		<meta property="dcterms.issued" title="W3CDTF" content="2019-01-01">
+		<meta property="dcterms.modified" title="W3CDTF" content="2024-01-23">
 		<meta property="dcterms.language" title="ISO639-2/T" content="fra">
 		<meta name='description' content="Formularies du processus d'inscription réglementaire pour les instruments médicaux"/>
 <meta name="keywords" content="Santé, Processus d'inscription réglementaire, PIR, Instruments médicaux"/>
@@ -168,7 +168,7 @@
 			<script>
 				var defPreFooter = document.getElementById("def-preFooter");
 				defPreFooter.outerHTML = wet.builder.preFooter({
-					"dateModified": "2024-01-08",
+					"dateModified": "2024-01-23",
 					"cdnEnv": "prod"
 				});
 			</script>
@@ -231,5 +231,5 @@
 		</script>
     <!--Start add custom scripts here-->
     <script src="./assets/lib/xml2json.js"></script>
-	<script src="polyfills-LZBJRJJE.js" type="module"></script><script src="main-AI6X4PIE.js" type="module"></script></body>
+	<script src="polyfills-LZBJRJJE.js" type="module"></script><script src="main-UEGVGGYQ.js" type="module"></script></body>
 </html>
