Added Missing Translation

--- a/mds_index_internal-2024-03-29-fr.html
+++ b/mds_index_internal-2024-03-29-fr.html
@@ -209,10 +209,10 @@
                     </div>
                     <div>
                         <div class="row">
-                            <h2>Internal User (i.e. HPFB) Links</h2>
+                            <h2>Liens dédiés aux utilisateurs internes (c.-à-d. DGPSA)</h2>
                         </div>
                         <div class="row">
-                            <a href="./mds/internal/company/fr/index_internal.html#main">Company Enrolment -Internal (2021-11-28) </a>
+                            <a href="./mds/internal/company/fr/index_internal.html#main">Enregistrement d’entreprise – interne (2024-03-29) </a>
                         </div>
 
                     </div>
