Deployment of MD CO form for 2024-02-07
Deployment of MD CO form for 2024-02-07

--- a/mds/prod_v40/internal/fr/index-internal.html
+++ b/mds/prod_v40/internal/fr/index-internal.html
@@ -12,7 +12,7 @@
 		<meta name="author" content="Santé Canada">
 		<meta property="dcterms.creator" content="Gouvernement du Canada, Santé Canada">
 		<meta property="dcterms.issued" title="W3CDTF" content="2019-01-01">
-		<meta property="dcterms.modified" title="W3CDTF" content="2024-01-23">
+		<meta property="dcterms.modified" title="W3CDTF" content="2024-02-07">
 		<meta property="dcterms.language" title="ISO639-2/T" content="fra">
 		<meta name='description' content="Formularies du processus d'inscription réglementaire pour les instruments médicaux"/>
 <meta name="keywords" content="Santé, Processus d'inscription réglementaire, PIR, Instruments médicaux"/>
@@ -139,8 +139,9 @@
 				}, 
 				        {
             "title": "Processus d’inscription réglementaire (PIR) pour les instruments médicaux",
-            "href": "https://lam-dev.hres.ca/rep-dev/mds_index.html"
+            "href": "https://lam-dev.hres.ca/rep-dev/mds_index-fr.html"
         }
+
 				],
 				"cdnEnv": "prod"
 			});
@@ -168,7 +169,7 @@
 			<script>
 				var defPreFooter = document.getElementById("def-preFooter");
 				defPreFooter.outerHTML = wet.builder.preFooter({
-					"dateModified": "2024-01-23",
+					"dateModified": "2024-02-07",
 					"cdnEnv": "prod"
 				});
 			</script>
@@ -231,5 +232,5 @@
 		</script>
     <!--Start add custom scripts here-->
     <script src="./assets/lib/xml2json.js"></script>
-	<script src="polyfills-LZBJRJJE.js" type="module"></script><script src="main-QGYSGMNH.js" type="module"></script></body>
+	<script src="polyfills-LZBJRJJE.js" type="module"></script><script src="main-ASHRN75M.js" type="module"></script></body>
 </html>
