--- a/mds/prod_v40/company/en/md-company.html
+++ b/mds/prod_v40/company/en/md-company.html
@@ -12,7 +12,7 @@
 		<meta name="author" content="Health Canada">
 		<meta property="dcterms.creator" content="Government of Canada, Health Canada">
 		<meta property="dcterms.issued" title="W3CDTF" content="2019-01-01">
-		<meta property="dcterms.modified" title="W3CDTF" content="2024-01-23">
+		<meta property="dcterms.modified" title="W3CDTF" content="2024-02-07">
 		<meta property="dcterms.language" title="ISO639-2/T" content="eng">
 		<meta name='description' content="Regulatory Enrolment Process Forms for Medical Devices"/>
 <meta name="keywords" content="Health, Regulatory Enrolment Process, REP, Medical Devices"/>
@@ -140,7 +140,7 @@
 				},
 				        {
             "title": "Health Canada  Regulatory Enrolment Process (REP) for Medical Devices",
-            "href": "https://lam-dev.hres.ca/rep-dev/mds_index.html"
+            "href": "https://lam-dev.hres.ca/REP-Form/mds_index.html"
         }
 				],
 				"cdnEnv": "prod"
@@ -169,7 +169,7 @@
 			<script>
 				var defPreFooter = document.getElementById("def-preFooter");
 				defPreFooter.outerHTML = wet.builder.preFooter({
-					"dateModified": "2024-01-23",
+					"dateModified": "2024-02-07",
 					"cdnEnv": "prod"
 				});
 			</script>
@@ -232,5 +232,5 @@
 		</script>
     <!--Start add custom scripts here-->
     <script src="./assets/lib/xml2json.js"></script>
-	<script src="polyfills-LZBJRJJE.js" type="module"></script><script src="main-YQKZDTN7.js" type="module"></script></body>
+	<script src="polyfills-LZBJRJJE.js" type="module"></script><script src="main-QKKUHQYO.js" type="module"></script></body>
 </html>
