Stylesheet packages, disabled links on french page

--- a/mds_index-2024-03-29-fr.html
+++ b/mds_index-2024-03-29-fr.html
@@ -176,7 +176,8 @@
                             <h2>Dans le cadre du processus de transaction réglementaire</h2>
                         </div>
                         <div class="row">
-                            <a href="./mds/transaction/fr/index.html#main">Modèle de transaction réglementaire (à venir)</a>
+                            <div>Modèle de transaction réglementaire (à venir)</div>
+                            
                             <ul>
                                 <li>Envoyé par la PCDE dans le cadre de la transaction réglementaire (demande).</li>
                                 <li>Requis avec chaque transaction réglementaire déposée auprès de Santé Canada.</li>
@@ -184,7 +185,7 @@
                             </ul>
                         </div>
                         <div class="row">
-                            <a href="./mds/applicationInfo/fr/index.html#main">Modèle d’information sur les demandes d’homologation (à venir)</a>
+                            <div>Modèle d’information sur les demandes d’homologation (à venir)</div>
                             <ul>
                                 <li>Envoyé par le PCDE dans le cadre de la transaction réglementaire (demande).</li>
                                 <li>Obligatoire uniquement pour un sous-ensemble de transactions. Reportez-vous à la section « 2.5.2 Modèle et processus d'information sur la demande » de l'ébauche du document d'orientation PIR pour les dispositifs médicaux décrivant en détail les exigences relatives au modèle d'information sur les demandes d’homologation.</li>
