REPPBFORM-608 - Revision page and capital correction

--- a/historique_révisions.html
+++ b/historique_révisions.html
@@ -152,7 +152,7 @@
             </div>
 			
 			<div class="row">
-            <h3>Publication du 8 janvier 2024</h3>
+            <h3>Publication du 12 février 2024</h3>
             </div>
             <div class="row">
                 <table class="col-md-12">
@@ -164,7 +164,7 @@
                         <td class="col-md-3">Modèle d’information sur le produit (IP)</td>
                         <td class="col-md-9">
                             <ul>
-                                <li>Ajout d’enquête pilote pédiatrique</li>
+                                <li>Ajout du sondage sur le programme pilote relatif aux médicaments pédiatriques</li>
                             </ul>
                         </td>
                     </tr>
@@ -420,7 +420,7 @@
     <div class="datemod col-xs-12 mrgn-tp-lg">
         <div class="datemod col-xs-12 mrgn-tp-lg">
             <dl id="wb-dtmd">
-                <dt>Date de modification : 2023-10-10</dt>
+                <dt>Date de modification : 2024-02-12</dt>
             </dl>
         </div>
     </div>
