--- a/historique_révisions.html
+++ b/historique_révisions.html
@@ -61,16 +61,16 @@
 </ul>
 <header role="banner">
     <div id="wb-bnr" class="container">
-        <!--<section id="wb-lng" class="visible-md visible-lg text-right">
+        <section id="wb-lng" class="visible-md visible-lg text-right">
         <h2 class="wb-inv">Sélection de la langue</h2>
         <div class="row">
         <div class="col-md-12">
         <ul class="list-inline margin-bottom-none">
-        <li><a lang="en" href="content-en.html">English</a></li>
+        <li><a lang="en" href="version_history.html">English</a></li>
         </ul>
         </div>
         </div>
-        </section>-->
+        </section>
         <div class="row">
             <div class="brand col-xs-8 col-sm-9 col-md-6">
                 <a href="http://www.canada.ca/fr/index.html">
