--- a/version_history.html
+++ b/version_history.html
@@ -66,8 +66,9 @@
 
             <div class="row">
                 <div class="col-md-12">
-
-
+					<ul class="list-inline margin-bottom-none">
+						<li><a lang="fr" href="historique_révisions.html">Français</a></li>
+					</ul>
                 </div>
             </div>
         </section>
