--- a/index-fr.html
+++ b/index-fr.html
@@ -148,7 +148,7 @@
                     <h2>Liens de modèle et le de formulaire</h2>
                 </div>
                 <div class="row">
-                    <a href="./historique_révisions.html">Historique des versions du modèle  (mise à jour 08/01/2024)</a>
+                    <a href="./historique_révisions.html">Historique des versions du modèle  (mise à jour 02/12/2024)</a>
                     <br>
                 </div>
                 <div class="row">
@@ -201,7 +201,7 @@
                     </ul>
                 </div>
                 <div class="row">
-                    <a href="./prod_v45/product/produit.html">Modèle d'information sur le produit (IP) (mise à jour 08/01/2024)</a>
+                    <a href="./prod_v45/product/produit.html">Modèle d'information sur le produit (IP) (mise à jour 12/02/2024)</a>
                     <ul>
                         <li> Obligatoire uniquement pour un sous-ensemble de transactions. Reportez-vous à la section « 2.5.2 Modèle et processus d'information sur le produit (PI) » du document d'orientation du PIR pour la liste des transactions de sous-ensemble.</li>
                         <li> Envoyé via la PCDE dans le dossier 1.2.1 pour les médicaments à usage humain ou partie I dossier 1.5 pour les médicaments vétérinaires de la transaction réglementaire (si fourni).</li>
@@ -244,7 +244,7 @@
         <div class="datemod col-xs-12 mrgn-tp-lg">
             <div class="datemod col-xs-12 mrgn-tp-lg">
                 <dl id="wb-dtmd">
-                    <dt>Date de modification : 10/10/2023</dt>
+                    <dt>Date de modification : 2024-02-12</dt>
                 </dl>
             </div>
         </div>
