REPPBFORM-624:  Internal index page URGENT changes

--- a/index.html
+++ b/index.html
@@ -244,15 +244,86 @@
                 </div>
             </div>
 			
+
 			<div>
-                <!--#include file="links-for-dev.html"-->
-            </div>
+				<div>
+					<div class="row">
+						<h1 property="name" id="wb-cont"> Regulatory Enrolment Process: Pharma/Bio </h1>
+					</div>
+
+					<div>
+						<div class="row">
+							<h2>Regulatory Enrolment Process: Pharma/Bio - Production v3.1</h2>
+						</div>
+						<div class="row">
+							<a href="./prod_index.html">Pharma/Bio Forms - Production v3.1 (English)</a>
+						</div>
+						<div class="row">
+							<a href="./prod_index-fr.html">Pharma/Bio Forms - Production v3.1 (French)</a>
+						</div>
+					</div>
+
+					<div>
+						<div class="row">
+							<h2>Regulatory Enrolment Process: Pharma/Bio - Pilot VDCT v4.0</h2>
+						</div>
+						<div class="row">
+							<a href="./vdct_index.html">Pharma/Bio Forms - Pilot VDCT v4.0</a>
+						</div>
+					</div>
+
+					<div>
+						<div class="row">
+							<h2>Regulatory Enrolment Process: Pharma/Bio - Merged V4.1</h2>
+						</div>
+						<div class="row">
+							<a href="./merged_index.html">Pharma/Bio Forms - Merged V4.1</a>
+						</div>
+					</div>
+
+					<div>
+						<div class="row">
+							<h2>Regulatory Enrolment Process: Pharma/Bio - IOTransition V4.2</h2>
+						</div>
+						<div class="row">
+							<a href="./io_index.html">Pharma/Bio Forms - IOTransition V4.2</a>
+						</div>
+					</div>
+
+					<div>
+						<div class="row">
+							<h2>Regulatory Enrolment Process: Human/Vet Drug V4.3</h2>
+						</div>
+						<div class="row">
+							<a href="./prod_v43_index.html">Human/Vet Drug V4.3 (English)</a>
+						</div>
+
+						<div class="row">
+							<a href="./prod_v43_index-fr.html">Human/Vet Drug V4.3 (French)</a>
+						</div>
+					</div>
+				</div>
+
+
+				<div>
+					<div class="row">
+						<h2>Internal User Links</h2>
+					</div>
+					<div class="row">
+						<a href="./prod_v42_wcag/company/companyINT-en.html">Company Enrolment -Internal</a>
+					</div>
+					<div class="row">
+						<a href="./pilot/repDiff/diffForm-en.html">Comparision tool (Deployed Sep 18, 2020)</a>
+					</div>
+				</div>
+
+			</div>							
         </div>
         <!--content ends here -->
         <div class="row">
             <div class="datemod col-xs-12 mrgn-tp-lg">
                 <dl id="wb-dtmd">
-                    <dt>Date modified: 2024-02-12</dt>
+                    <dt>Date modified: 2024-02-14</dt>
                 </dl>
             </div>
         </div>
