--- a/index.html
+++ b/index.html
@@ -227,16 +227,7 @@
                 <div class="row">
                     <h2>Stylesheet Download Links</h2>
                 </div>
-                <!--<div class="row">-->
-                    <!--<div class="col-md-12 form-group">-->
-                        <!--<a href="./stylesheet/pharmabio_stylesheets_3_0_en.zip">Download V3.0 stylesheet zip file (English version) </a>-->
-                    <!--</div>-->
-                <!--</div>-->
-                <!--<div class="row">-->
-                    <!--<div class="col-md-12 form-group">-->
-                        <!--<a href="./stylesheet/pharmabio_stylesheets_3_1_en.zip">Download V3.1 stylesheet zip file (English version) </a>-->
-                    <!--</div>-->
-                <!--</div>-->
+
                 <div class="row">
                     <div class="col-md-12 form-group">
                         <a href="./stylesheet/pharmabio_stylesheets_en.zip">Download V3.0, V3.1, V4.0, V4.1, V4.2, V4.3 and V4.4 stylesheet zip file (Updated 2023-02-28) </a>
@@ -245,72 +236,12 @@
             </div>
 			
 
-			<div>
-				<div>
-					<div class="row">
-						<h1 property="name" id="wb-cont"> Regulatory Enrolment Process: Pharma/Bio </h1>
-					</div>
-
-					<div>
-						<div class="row">
-							<h2>Regulatory Enrolment Process: Pharma/Bio - Production v3.1</h2>
-						</div>
-						<div class="row">
-							<a href="./prod_index.html">Pharma/Bio Forms - Production v3.1 (English)</a>
-						</div>
-						<div class="row">
-							<a href="./prod_index-fr.html">Pharma/Bio Forms - Production v3.1 (French)</a>
-						</div>
-					</div>
-
-					<div>
-						<div class="row">
-							<h2>Regulatory Enrolment Process: Pharma/Bio - Pilot VDCT v4.0</h2>
-						</div>
-						<div class="row">
-							<a href="./vdct_index.html">Pharma/Bio Forms - Pilot VDCT v4.0</a>
-						</div>
-					</div>
-
-					<div>
-						<div class="row">
-							<h2>Regulatory Enrolment Process: Pharma/Bio - Merged V4.1</h2>
-						</div>
-						<div class="row">
-							<a href="./merged_index.html">Pharma/Bio Forms - Merged V4.1</a>
-						</div>
-					</div>
-
-					<div>
-						<div class="row">
-							<h2>Regulatory Enrolment Process: Pharma/Bio - IOTransition V4.2</h2>
-						</div>
-						<div class="row">
-							<a href="./io_index.html">Pharma/Bio Forms - IOTransition V4.2</a>
-						</div>
-					</div>
-
-					<div>
-						<div class="row">
-							<h2>Regulatory Enrolment Process: Human/Vet Drug V4.3</h2>
-						</div>
-						<div class="row">
-							<a href="./prod_v43_index.html">Human/Vet Drug V4.3 (English)</a>
-						</div>
-
-						<div class="row">
-							<a href="./prod_v43_index-fr.html">Human/Vet Drug V4.3 (French)</a>
-						</div>
-					</div>
-				</div>
-
-
 				<div>
 					<div class="row">
 						<h2>Internal User Links</h2>
 					</div>
 					<div class="row">
-						<a href="./prod_v42_wcag/company/companyINT-en.html">Company Enrolment -Internal</a>
+						<a href="./prod_v42_wcag/company/companyINT-en.html">Company Enrolment - Internal version 4.2.4</a>
 					</div>
 					<div class="row">
 						<a href="./pilot/repDiff/diffForm-en.html">Comparision tool (Deployed Sep 18, 2020)</a>
